--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "eslint": "^5.10.0",
     "express": "^4.16.4",
     "mongoose": "^5.3.16",
