--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "cors": "^2.8.5",
     "eslint": "^5.10.0",
     "express": "^4.16.4",
+    "lodash": "^4.17.11",
     "mongoose": "^5.3.16",
     "morgan": "^1.9.1",
     "nodemon": "^1.18.8"
