[Feature] Implement token based authentication.

--- a/package.json
+++ b/package.json
@@ -1,9 +1,21 @@
 {
+  "name": "sms-mgt-app",
+  "version": "1.0.0",
+  "description": "SMS Management Application API",
+  "main": "app.js",
+  "repository": {
+    "url": "https://github.com/pluwum/sms-mgt-api",
+    "type": "git"
+  },
+  "author": "Patrick Luwum <luwyxx@gmail.com>",
+  "license": "MIT",
   "dependencies": {
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
+    "dotenv": "^6.2.0",
     "eslint": "^5.10.0",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.11",
     "mongoose": "^5.3.16",
     "morgan": "^1.9.1",
