[Chore] Setup testing.

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 
-  SECRET=you-cant-touch-this
-  DATABASE_URI=mongodb://localhost:27017/yourDBname
-
+SECRET=you-cant-touch-this
+DATABASE_URI=mongodb://localhost:27017/yourDBname
+APP_BASE_URL=/api/v1
